syntax = "proto3";

package kosenkovd.product_service.product_service.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "pkg/product-service;product_service";

service ProductService {
  rpc CreateProductV1 (CreateProductV1Request) returns (CreateProductV1Response) {
    option (google.api.http) = {
      post: "/v1/products/create"
      body: "*"
    };
  }
}

message Product {
  uint64 id  = 1;
  string name = 2;
  uint64 category_id = 3;
}

message CreateProductV1Request {
  string name = 1 [(validate.rules).string = { min_len: 2, max_len: 100 }];
  uint64 category_id = 2 [(validate.rules).uint64.gt = 0];
}

message CreateProductV1Response {
  Product result = 1;
}